refactor to reactive code