@@ -1,22 +1,27 @@
 package org.example;
 
 import ai.onnxruntime.*;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 
 import java.io.File;
 import java.nio.FloatBuffer;
-import java.util.*;
+import java.util.AbstractMap;
+import java.util.Map;
 
 public class Main {
+
+    // unchanged: your inference for one session
     public static int assignNewPoint(float lat, float lon, OrtSession session, OrtEnvironment env) throws OrtException {
-        // ONNX expects float32 [[lat, lon]]
         float[] inputData = new float[]{lat, lon};
-        long[] shape = new long[]{1, 2}; // 1 row, 2 columns
+        long[] shape = new long[]{1, 2};
 
         try (OnnxTensor inputTensor = OnnxTensor.createTensor(env, FloatBuffer.wrap(inputData), shape)) {
             String inputName = session.getInputNames().iterator().next();
             String outputName = session.getOutputNames().iterator().next();
 
-            try (OrtSession.Result result = session.run(Collections.singletonMap(inputName, inputTensor))) {
+            try (OrtSession.Result result = session.run(Map.of(inputName, inputTensor))) {
                 OnnxValue val = result.get(outputName).orElseThrow();
                 long clusterId = ((long[]) val.getValue())[0];
                 return (int) clusterId;
@@ -24,38 +29,50 @@ public class Main {
         }
     }
 
+    // Reactive helper: load a session, run inference, then close the session automatically
+    static Mono<Map.Entry<Integer, Integer>> runForRadius(
+            OrtEnvironment env,
+            String modelDir,
+            Integer km,  // Changed to Integer instead of int
+            float lat,
+            float lon
+    ) {
+        return Mono.using(
+                // resource supplier (create OrtSession)
+                () -> {
+                    String modelPath = modelDir + File.separator + "kmeans_" + km + "km_model.onnx";
+                    OrtSession.SessionOptions opts = new OrtSession.SessionOptions();
+                    return env.createSession(modelPath, opts);
+                },
+                // resource consumer (do the work with the session)
+                session -> Mono.fromCallable(() -> assignNewPoint(lat, lon, session, env))
+                        .subscribeOn(Schedulers.boundedElastic())
+                        .map(clusterId -> new AbstractMap.SimpleEntry<>(km, clusterId)),
+                // resource cleanup
+                session -> {
+                    try { session.close(); } catch (Exception ignore) {}
+                }
+        );
+    }
 
     public static void main(String[] args) {
         String modelDir = "E:\\Hydroneo\\Analytics\\disease\\models";
         int[] radii = {10, 30, 50};
 
+        float newLat = 6.6198218f;
+        float newLon = 100.0785343f;
+        System.out.printf("%nNew point: (%.6f, %.6f)%n%n", newLat, newLon);
+
+        // Create the environment once, close it when the pipeline is done
         try (OrtEnvironment env = OrtEnvironment.getEnvironment()) {
-            Map<Integer, OrtSession> sessions = new HashMap<>();
 
-            // Load sessions
-            for (int km : radii) {
-                String modelPath = modelDir + File.separator + "kmeans_" + km + "km_model.onnx";
-                OrtSession.SessionOptions options = new OrtSession.SessionOptions();
-                OrtSession session = env.createSession(modelPath, options);
-                sessions.put(km, session);
-            }
-
-            // Example new coordinates
-            float newLat = 6.6198218f;
-            float newLon = 100.0785343f;
-            System.out.printf("%n New point: (%.6f, %.6f)%n%n", newLat, newLon);
-
-            // Run inference for each radius
-            for (int km : radii) {
-                OrtSession session = sessions.get(km);
-                int clusterId = assignNewPoint(newLat, newLon, session, env);
-                System.out.printf("At %dkm radius → belongs to cluster %d%n", km, clusterId);
-            }
-
-            // Cleanup
-            for (OrtSession s : sessions.values()) {
-                s.close();
-            }
+            // Fan-out across radii in parallel, run all, collect, then print.
+            Flux.fromStream(java.util.Arrays.stream(radii).boxed())
+                    .flatMap(km -> runForRadius(env, modelDir, km, newLat, newLon), radii.length)
+                    .sort(Map.Entry.comparingByKey())
+                    .doOnNext(e -> System.out.printf("At %dkm radius → belongs to cluster %d%n", e.getKey(), e.getValue()))
+                    .then()
+                    .block();
 
         } catch (Exception e) {
             e.printStackTrace();
